# radiodan

./: .env.example  .gitignore  README.md  TASKS.md  docker-compose.yml  ideas.md  pyproject.toml  requirements.txt  run_radiodan.sh
bridge/: __init__.py  booth.py  config.py  config_store.py  event_store.py  main.py
bridge/audio/: __init__.py  mixer.py  playlist_planner.py  stream_context.py  voice_scheduler.py
bridge/channels/: __init__.py  telegram.py
bridge/plugins/: __init__.py  base.py  dong.py  presenter.py  simple_playlist_feeder.py
bridge/services/: __init__.py  llm_service.py  ollama_service.py  stt_service.py  tts_service.py
bridge/web/: __init__.py  server.py
bridge/web/routes/: __init__.py  architecture.py  audio.py  config.py  dashboard.py  plugins.py  queue.py  system.py  timeline.py
bridge/web/static/: duck-envelope.js  style.css  timeline.js
bridge/web/templates/: architecture.html  audio.html  base.html  config.html  dashboard.html  system.html  timeline.html
bridge/web/templates/plugins/: _instance_row.html  list.html  (+1 more)
config/: icecast.xml  radiodan.db.bak  radiodan.yaml  station.liq
doc/: 2026-01-28 CLaude Code plugin.md  2026-01-28 Original implementation_plan.md  2026-02-03 DONG plugin.md  2026-02-07-RadioDan3D.html  journal.md  radio_timeline_v4.html  radio_timeline_viz prototype.html  tailscale.md  todo-future.md
sounds/8bit/: .gitkeep
stations/radio-dan/: .env.example  station.yaml
stations/radiodan-home/: .env.example  station.yaml
tests/: conftest.py  test_event_store.py  test_instrumentation.py  test_timeline_sse.py
