[project]
name = "radiodan"
version = "0.2.0"
description = "Ambient AI radio station"
requires-python = ">=3.11"
dependencies = [
    "python-telegram-bot[job-queue]>=21.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "aiohttp>=3.9.0",
    "aiosqlite>=0.20.0",
    "aiohttp-jinja2>=1.6",
    "jinja2>=3.1.0",
    "mutagen>=1.47.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-aiohttp>=1.0",
]

[project.scripts]
radiodan = "bridge.main:main"

[tool.setuptools.packages.find]
include = ["bridge*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
